--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div id="header">
         <h1 id="flappy">Flappy Bird</h1>
         <div id="cca">
-        <a href="http://cambridgecoding.com">
-            <img src="http://cambridgecoding.com/img/logo_cca.png" id="logo"><br/>
-            <p>I learned to code in a day with CCA!</p>
+        <a href="https://www.facebook.com/alexarotsker?fref=hovercard">
+            <img src="http://www.cambridgepluralism.org/uploads/1/7/4/9/17499733/1959432.png" id="logo"><br/>
+            <p>I learned to code!</p>
         </a>
         </div>
     </div>
